Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2805

Client connections are connecting with SPDY 3 instead of 3.1

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • SPDY

    Description

      When testing with Chrome spdycat it is preferring to connect with SPDY 3:
      [bcall@cat ~]$ spdycat -v https://l10.ycs.sjb.yahoo.com
      [ 0.025] NPN select next protocol: the remote server offers:

      • spdy/3
      • spdy/3.1
      • http/1.0
      • http/1.1
        NPN selected the protocol: spdy/3

      Attachments

        Issue Links

          Activity

            People

              briang Brian Geffon
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: