TS-2805: Client connections are connecting with SPDY 3 instead of 3.1